printbundle translations added

--- a/src/Mapbender/CoreBundle/Resources/views/Element/poi.html.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/Element/poi.html.twig
@@ -2,7 +2,7 @@
     <div class="input">
     <form id="poiForm">
         <label for="body">{{ 'mb.core.poi.label.text'|trans }}</label><br />
-        <textarea id="body">{{ configuration.body }}</textarea>
+        <textarea id="body">{{ configuration.body | trans }}:</textarea>
     </form>
     </div>
     <div class="output">
