--- a/src/Mapbender/PrintBundle/Resources/views/Element/imageexport.html.twig
+++ b/src/Mapbender/PrintBundle/Resources/views/Element/imageexport.html.twig
@@ -1,5 +1,5 @@
 <div id="{{ id }}" class="mb-element mb-element-imageexport" title="{{ title|trans }}">
-  <p>{{ 'Choose Export Format'| trans }}</p>
+  <p>{{ 'mb.print.imageexport.chooseformat'| trans }}</p>
   <input type="radio" value="png" name="imageformat">PNG<br>
   <input type="radio" value="jpeg" name="imageformat">JPG
 </div>
