--- a/src/Mapbender/CoreBundle/Resources/views/corebundle.trans.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/corebundle.trans.twig
@@ -1,3 +1,4 @@
+{# this file contains all translations tags from '.php' scripts #}
 {{ "mb.core.aboutdialog.class.title" | trans}}
 {{ "mb.core.aboutdialog.class.description" | trans}}
 {{ "mb.core.aboutdialog.tag.help" | trans}}
@@ -63,27 +64,61 @@
 {{ "mb.core.overview.tag.overview" | trans}}
 {{ "mb.core.overview.tag.map" | trans}}
 
-{#{ "mb.core.xxx.class.title" | trans}}
-{{ "mb.core.xxx.class.description" | trans}}
-{{ "mb.core.xxx.tag.xx" | trans}}
-{{ "mb.core.xxx.tag.xx" | trans}}
-{{ "mb.core.xxx.class.title" | trans}}
-{{ "mb.core.xxx.class.description" | trans}}
-{{ "mb.core.xxx.tag.xx" | trans}}
-{{ "mb.core.xxx.tag.xx" | trans}}
-{{ "mb.core.xxx.class.title" | trans}}
-{{ "mb.core.xxx.class.description" | trans}}
-{{ "mb.core.xxx.tag.xx" | trans}}
-{{ "mb.core.xxx.tag.xx" | trans}}
-{{ "mb.core.xxx.class.title" | trans}}
-{{ "mb.core.xxx.class.description" | trans}}
-{{ "mb.core.xxx.tag.xx" | trans}}
-{{ "mb.core.xxx.tag.xx" | trans}}
-{{ "mb.core.xxx.class.title" | trans}}
-{{ "mb.core.xxx.class.description" | trans}}
-{{ "mb.core.xxx.tag.xx" | trans}}
-{{ "mb.core.xxx.tag.xx" | trans}}
-{{ "mb.core.xxx.class.title" | trans}}
-{{ "mb.core.xxx.class.description" | trans}}
-{{ "mb.core.xxx.tag.xx" | trans}}
-{{ "mb.core.xxx.tag.xx" | trans}#}
+{{ "mb.core.poi.class.title" | trans}}
+{{ "mb.core.poi.class.description" | trans}}
+{{ "mb.core.poi.tag.poi" | trans}}
+{{ "mb.core.poi.tag.point" | trans}}
+{{ "mb.core.poi.tag.interest" | trans}}
+
+{{ "mb.core.printclient.class.title" | trans}}
+{{ "mb.core.printclient.class.description" | trans}}
+{{ "mb.core.printclient.tag.print" | trans}}
+{{ "mb.core.printclient.tag.pdf" | trans}}
+{{ "mb.core.printclient.tag.png" | trans}}
+{{ "mb.core.printclient.tag.gif" | trans}}
+{{ "mb.core.printclient.tag.jpg" | trans}}
+{{ "mb.core.printclient.tag.jpeg" | trans}}
+
+{{ "mb.core.ruler.class.title" | trans}}
+{{ "mb.core.ruler.class.description" | trans}}
+{{ "mb.core.ruler.tag.line" | trans}}
+{{ "mb.core.ruler.tag.area" | trans}}
+{{ "mb.core.ruler.tag.measure" | trans}}
+
+{{ "mb.core.scalebar.class.title" | trans}}
+{{ "mb.core.scalebar.class.description" | trans}}
+{{ "mb.core.scalebar.tag.scale" | trans}}
+{{ "mb.core.scalebar.tag.bar" | trans}}
+
+{{ "mb.core.scaledesplay.class.title" | trans}}
+{{ "mb.core.scaledesplay.class.description" | trans}}
+{{ "mb.core.scaledesplay.tag.scale" | trans}}
+{{ "mb.core.scaledesplay.tag.display" | trans}}
+
+{{ "mb.core.scaleselector.class.title" | trans}}
+{{ "mb.core.scaleselector.class.description" | trans}}
+{{ "mb.core.scaleselector.tag.scale" | trans}}
+{{ "mb.core.scaleselector.tag.selector" | trans}}
+
+{{ "mb.core.searchrouter.class.title" | trans}}
+{{ "mb.core.searchrouter.class.description" | trans}}
+{{ "mb.core.searchrouter.tag.search" | trans}}
+{{ "mb.core.searchrouter.tag.router" | trans}}
+
+{{ "mb.core.sketch.class.title" | trans}}
+{{ "mb.core.sketch.class.description" | trans}}
+{{ "mb.core.sketch.tag.sketch" | trans}}
+{{ "mb.core.sketch.tag.circle" | trans}}
+
+{{ "mb.core.srsselector.class.title" | trans}}
+{{ "mb.core.srsselector.class.description" | trans}}
+{{ "mb.core.srsselector.tag.srs" | trans}}
+{{ "mb.core.srsselector.tag.selector" | trans}}
+
+{{ "mb.core.zoombar.class.title" | trans}}
+{{ "mb.core.zoombar.class.description" | trans}}
+{{ "mb.core.zoombar.tag.zoom" | trans}}
+{{ "mb.core.zoombar.tag.pan" | trans}}
+{{ "mb.core.zoombar.tag.control" | trans}}
+{{ "mb.core.zoombar.tag.navigation" | trans}}
+{{ "mb.core.zoombar.tag.panel" | trans}}
