--- a/src/Mapbender/CoreBundle/Resources/views/corebundle.trans.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/corebundle.trans.twig
@@ -90,10 +90,10 @@
 {{ "mb.core.scalebar.tag.scale" | trans}}
 {{ "mb.core.scalebar.tag.bar" | trans}}
 
-{{ "mb.core.scaledesplay.class.title" | trans}}
-{{ "mb.core.scaledesplay.class.description" | trans}}
-{{ "mb.core.scaledesplay.tag.scale" | trans}}
-{{ "mb.core.scaledesplay.tag.display" | trans}}
+{{ "mb.core.scaledisplay.class.title" | trans}}
+{{ "mb.core.scaledisplay.class.description" | trans}}
+{{ "mb.core.scaledisplay.tag.scale" | trans}}
+{{ "mb.core.scaledisplay.tag.display" | trans}}
 
 {{ "mb.core.scaleselector.class.title" | trans}}
 {{ "mb.core.scaleselector.class.description" | trans}}
