--- a/src/Mapbender/CoreBundle/Resources/views/Template/fullscreen.html.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/Template/fullscreen.html.twig
@@ -39,26 +39,16 @@
         <li class="sidePaneTabItem toggleSideBar"></li>
       </ul>
       <div class="sideContent">
-          {% for element in application.elements.sidepane %}
-            {{ element.render() | raw }}
-          {% endfor %}
+        {% include "MapbenderCoreBundle:Template:region.html.twig"  with {'region_props': region_props, 'application': application, 'region': 'sidepane' }%}
       </div>
     </div>
   {% endif %}
     <div id="content" class="contentPane">
-      {% if application.elements.content is defined %}
-        {% for element in application.elements.content %}
-          {{ element.render() | raw }}
-        {% endfor %}
-      {% endif %}
+      {% include "MapbenderCoreBundle:Template:region.html.twig"  with {'region_props': region_props, 'application': application, 'region': 'content' }%}
     </div>
 
     <ul id="footer" class="toolBar itemsRight bottom">
-      {% if application.elements.footer is defined %}
-        {% for element in application.elements.footer %}
-          <li class="toolBarItem">{{ element.render() | raw }}</li>
-        {% endfor %}
-      {% endif %}
+      {% include "MapbenderCoreBundle:Template:region.html.twig"  with {'region_props': region_props, 'application': application, 'region': 'footer' }%}
     </ul>
   </div>
 
