--- a/src/Mapbender/CoreBundle/Resources/views/Element/layertree.html.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/Element/layertree.html.twig
@@ -11,8 +11,10 @@
         <input class="layer-info checkbox" type="checkbox" name="info"/>
       </div>
       <span class="layer-title labelCheck"></span>
+      {% if configuration.menu != null and configuration.menu | length > 0 %}
       <span class="layer-menu-btn">&#9776;
-        <div class="layer-menu hide-elm">
+        <div class="layer-menu ">
+          {% if configuration.menu['opacity'] is difined %}
           <div class="layer-opacity">
             <div class="layer-opacity-slider"></div>
             <div class="layer-opacity-labels">
@@ -21,12 +23,14 @@
               <span class="layer-opacity-label-zero">0 %</span>
             </div>
           </div>
+          {% endif %}
           <span class="layer-zoom span-btn">{{ 'mb.core.layertree.label.zoomtolayer'|trans }}</span>
           <span class="layer-metadata span-btn">{{ 'mb.core.layertree.label.metadata'|trans }}</span>
           <span class="layer-legend span-btn">{{ 'mb.core.layertree.label.legend'|trans }}</span>
           <span class="layer-kmlexport span-btn">{{ 'mb.core.layertree.label.kmlexport'|trans }}</span>
         </div>
       </span>
+      {% endif %}
       <span class="iconRemove" title="{{ 'mb.core.layertree.tooltip.removelayer'|trans }}"></span>
     </div>
     <ul id="list-first" class="layers"></ul>
