layertree menu added

--- a/src/Mapbender/CoreBundle/Resources/views/Element/layertree.html.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/Element/layertree.html.twig
@@ -25,9 +25,9 @@
             </div>
           </div>
           {% elseif item == 'zoomtolayer' %}
-          <span class="layer-zoom span-btn">{{ 'mb.core.layertree.label.zoomtolayer'|trans }}</span>
+          <span class="layer-zoom span-btn inactive">{{ 'mb.core.layertree.label.zoomtolayer'|trans }}</span>
           {% else %}
-          <span class="layer span-btn">Undefined</span>
+          <span class="layer span-btn inactive">Undefined</span>
           {% endif %}
           {% endfor %}
         </div>
