KmlBundle translations added

--- a/src/Mapbender/KmlBundle/Resources/views/Element/kmlexport_map.kml.twig
+++ b/src/Mapbender/KmlBundle/Resources/views/Element/kmlexport_map.kml.twig
@@ -4,7 +4,7 @@
     xmlns:kml="http://www.opengis.net/kml/2.2"
     xmlns:atom="http://www.w3.org/2005/Atom">
 <Folder>
-    <name>KML-Export des BKG-Kartenviewers</name>
+    <name>{{ "mb.kml.kmlexport.xml.name" | trans }}</name>
     <visibility>1</visibility>
 {% for title, layer in layers %}
         <GroundOverlay>
