--- a/src/Mapbender/ManagerBundle/Resources/views/Element/select.html.twig
+++ b/src/Mapbender/ManagerBundle/Resources/views/Element/select.html.twig
@@ -1,4 +1,4 @@
-{% for class, meta in elements|sort %}
+{% for class, meta in elements %}
 <a class="checkContainer chooseElement" data-tags="{{ meta.tags | join(',') | lower }}" title="Choose {{meta.title}} Element" href="{{ path('mapbender_manager_element_new', {'slug': app.request.get('slug'), 'class': meta.class, 'region': region}) }}">
     <span class="subTitle">{{ meta.title }}</span>
     <span class="iconOk iconBig"></span>
