twig scss assets moved to php

--- a/src/Mapbender/CoreBundle/Resources/public/sass/libs/_variables.scss
+++ b/src/Mapbender/CoreBundle/Resources/public/sass/libs/_variables.scss
@@ -1,6 +1,9 @@
 //--------------------------------------------------------------patterns
-$imageBasePath: "../../mapbendercore/image";
-$iconBasePath: "../../mapbendercore/fonts";
+// $imageBasePath: "../../mapbendercore/image";
+// $iconBasePath: "../../mapbendercore/fonts";
+$imageBasePath: "../../image";
+$iconBasePath: "../../fonts";
+
 
 $contentPatternUrl: $imageBasePath + "/content.png";
 $headPatternUrl: $imageBasePath + "/head.png";
