--- a/src/Mapbender/CoreBundle/Resources/views/Template/fullscreen.html.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/Template/fullscreen.html.twig
@@ -5,43 +5,19 @@
 {% block favicon %}{{ asset('favicon.png') }}{% endblock %}
 
 {% block css %}
-  {% stylesheets filter="compass,cssrewrite"
-    "bundles/mapbendercore/sass/theme/mapbender3.scss"
-    "bundles/mapbendercore/sass/template/fullscreen.scss"
-
-    "bundles/mapbendercore/sass/element/about_dialog.scss"
-    "bundles/mapbendercore/sass/element/activityindicator.scss"
-    "bundles/mapbendercore/sass/element/basesourceswitcher.scss"
-    "bundles/mapbendercore/sass/element/button.scss"
-    "bundles/mapbendercore/sass/element/coordinatesdisplay.scss"
-    "bundles/mapbendercore/sass/element/copyright.scss"
-    "bundles/mapbendercore/sass/element/gpsposition.scss"
-    "bundles/mapbendercore/sass/element/layertree.scss"
-    "bundles/mapbendercore/sass/element/legend.scss"
-    "bundles/mapbendercore/sass/element/map.scss"
-    "bundles/mapbendercore/sass/element/overview.scss"
-    "bundles/mapbendercore/sass/element/printclient.scss"
-    "bundles/mapbendercore/sass/element/scalebar.scss"
-    "bundles/mapbendercore/sass/element/scaledisplay.scss"
-    "bundles/mapbendercore/sass/element/search_router.scss"
-    "bundles/mapbendercore/sass/element/zoombar.scss"
-    "bundles/mapbenderwms/sass/element/wmsloader.scss"
-    "bundles/mapbenderwmc/sass/element/wmceditor.scss"
-  %}
-    <link rel="stylesheet" href="{{ asset_url }}" />
-  {% endstylesheets %}
+  <link rel="stylesheet" href="{{ path('mapbender_core_application_assets', {'slug': application.slug, 'type': 'css'}) }}"/>
 {% endblock %}
-  
+
 {% block trans %}
   {{parent()}}
   <script type="text/javascript" src="{{ path('mapbender_core_application_assets', {'slug': application.slug, 'type': 'trans'}) }}"></script>
 {% endblock %}
-  
+
 {% block js %}
   {{parent()}}
   <script type="text/javascript" src="{{ path('mapbender_core_application_assets', {'slug': application.slug, 'type': 'js'}) }}"></script>
 {% endblock %}
-  
+
 
 {% block frontend_content %}
 
