element acl check added

--- a/src/Mapbender/ManagerBundle/Resources/views/Element/security.html.twig
+++ b/src/Mapbender/ManagerBundle/Resources/views/Element/security.html.twig
@@ -1,6 +1,5 @@
 <form id="elementSecurity" action="{{ path('mapbender_manager_element_security', { 'slug': app.request.get('slug'), 'id': app.request.get('id') }) }}" method="post" {{ form_enctype(form)}} novalidate="novalidate">
-<a id="addPermission" href="{{path('fom_user_acl_overview')}}" class="iconAdd iconBig right" title="{{'Add users and groups'|trans}}"></a>
-
-<div class="clearContainer"></div>
+{{ form_row(form._token) }}
+    <div class="clearContainer"></div>
 {{ form_widget(form.acl) }}
 </form>
