--- a/src/Mapbender/CoreBundle/Resources/public/sass/modules/_checkbox.scss
+++ b/src/Mapbender/CoreBundle/Resources/public/sass/modules/_checkbox.scss
@@ -4,7 +4,7 @@
   &.checkboxDisabled{@include opacity(0.4);}
 }
 .checkbox{
-  @include pos(-9999px,'','',0);
+  @include absolute(-9999px '' '' 0);
   height: 100%;
   width: 100%;
   @include opacity(0);
