--- a/src/Mapbender/CoreBundle/Resources/views/ElementAdmin/poi.html.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/ElementAdmin/poi.html.twig
@@ -1,4 +1,4 @@
-<div class="elementForm">
+<div class="elementForm defaultForm">
     <div class="left">
         {{ form_widget(form.configuration.useMailto) }}<label for="{{form.configuration.useMailto.vars.id}}" class="labelCheck">{{ "mb.core.admin.poi.label.usemailto"|trans }}</label>
     </div>
