--- a/src/Mapbender/ManagerBundle/Resources/public/sass/element/form.scss
+++ b/src/Mapbender/ManagerBundle/Resources/public/sass/element/form.scss
@@ -11,7 +11,7 @@
 .defaultForm{
   $label:70px;
   .labelInput{width:$label;}
-  .input, .dropdown{width:$elementPopupWidth - $label + $space;}
+  .input, .dropdown{width:$elementPopupWidth - $label;}
 }
 .collectionItem{
   clear:both;
