--- a/src/Mapbender/WmcBundle/Resources/views/ElementAdmin/suggestmap.html.twig
+++ b/src/Mapbender/WmcBundle/Resources/views/ElementAdmin/suggestmap.html.twig
@@ -1,4 +1,4 @@
-<div class="elementFormWmsLoader elementForm">
+<div class="elementFormWmsLoader elementForm defaultForm">
     {{ form_label(form.title) }}{{ form_widget(form.title) }}
     <div class="clearContainer"></div>
     {{ form_label(form.configuration.tooltip) }}{{ form_widget(form.configuration.tooltip) }}
@@ -6,5 +6,5 @@
     {{ form_label(form.configuration.target) }}{{ form_widget(form.configuration.target) }}
     <div class="clearContainer"></div>
     {{ form_label(form.configuration.receiver) }}{{ form_widget(form.configuration.receiver) }}
-    <div class="clearContainer"></div>   
+    <div class="clearContainer"></div>
 </div>
