--- a/src/Mapbender/CoreBundle/Resources/public/sass/modules/_button.scss
+++ b/src/Mapbender/CoreBundle/Resources/public/sass/modules/_button.scss
@@ -24,23 +24,8 @@
   color:$lightFontColor;
   background-color:$buttonFirstColor;
   @extend .buttonCore;
-  @include border-radius($radius);
-  @include box-shadow(0 0 6px rgba(0,0,0,0.1),
-                      inset 0 -10px 10px $buttonSecondColor);
-  &:hover{
-    background-color:darken($buttonFirstColor, 5%);
-    @include box-shadow(0 0 6px rgba(0,0,0,0.1),
-                        inset 0 -10px 10px darken($buttonSecondColor, 4%));
-  }
 
-  &.icon{
-    padding-left:20px;
-    background:{
-      image:url("../../fomcore/images/link_arrow.png");
-      position:10px center;
-      repeat: no-repeat;
-    }
-  }
+  &:hover{background-color:darken($buttonFirstColor, 5%);}
 
   &.critical{
     $buttonCriticalFirstColor:#d36565;
@@ -50,20 +35,12 @@
     color:$lightFontColor;
     background-color:$buttonCriticalFirstColor;
     @extend .buttonCore;
-    @include border-radius($radius);
-    @include box-shadow(0 0 6px rgba(0,0,0,0.1),
-                        inset 0 -10px 10px $buttonCriticalSecondColor);
-    &:hover{
-      background-color:darken($buttonCriticalFirstColor, 5%);
-      @include box-shadow(0 0 6px rgba(0,0,0,0.1),
-                          inset 0 -10px 10px darken($buttonCriticalSecondColor, 4%));
-    }
+    &:hover{background-color:darken($buttonCriticalFirstColor, 5%);}
   }
 }
 .linkButton{
   @extend .buttonCore;
   color:$middleFontColor;
-  @include text-shadow(#fff 1px 1px 0px);
 
   &:before{margin-right:5px;}
   &:hover, &.activeLink, &:active{color:$ciColor;};
