--- a/src/Mapbender/CoreBundle/Resources/public/sass/modules/_dropdown.scss
+++ b/src/Mapbender/CoreBundle/Resources/public/sass/modules/_dropdown.scss
@@ -20,7 +20,7 @@
     width: 100%;
     line-height:$lineHeight;
     cursor: pointer;
-    &.iconDown:before{@include pos(0px,5px,'','');}
+    &.iconDown:before{@include absolute(0 5px '' '');}
   }
   .dropdownList{
     background-color: #FFF;
@@ -34,8 +34,6 @@
     border:solid 1px lighten($thirdColor, 15%);
 
     width: 100%;
-    @include box-shadow(0px 0px 2px rgba(0, 0, 0, 0.1),
-                      inset 0px 0px 2px #fff);
 
     li{
       padding-left: 5px;
@@ -47,11 +45,9 @@
   }
   .hiddenDropdown{
     display:none;
-    @include pos(-9999px,'','','');
+    @include absolute(-9999px '' '' '');
   }
 
   @extend .smallText;
-  @include border-radius($radius);
   @include noUserSelect;
-  @include text-shadow(none);
 }
