--- a/src/Mapbender/CoreBundle/Resources/public/sass/modules/_tabcontainer.scss
+++ b/src/Mapbender/CoreBundle/Resources/public/sass/modules/_tabcontainer.scss
@@ -7,8 +7,6 @@
     color:$middleFontColor;
     background-color:$contentColor;
     cursor:pointer;
-    position:relative;
-    bottom:-$tabPopHeight*2;
     height:$tabHeight;
     z-index:10;
     border:{
@@ -18,18 +16,12 @@
     }
     float:left;
     padding:3px 10px 3px 10px;
+    @include relative('' '' '-$tabPopHeight*2' '');
     @extend .smallText;
-    @include box-shadow(1px 0px 2px rgba(0, 0, 0, 0.1),
-                        inset 1px 0px 2px #fff);
     @include transition(all 0.2s ease-in-out);
     @include noUserSelect();
 
-    &:first-child{@include border-top-left-radius($radius);}
-
-    &:hover{
-      background-color:#fff;
-      bottom:-$tabPopHeight;
-    }
+    &:hover{bottom:-$tabPopHeight;}
 
     &.active{
       cursor:default;
@@ -38,7 +30,6 @@
       height:$tabHeight;
       z-index: 30;
       background-color:$contentColor;
-      @include box-shadow(1px 0px 1px rgba(0, 0, 0, 0.1));
     }
   }
   .container{
@@ -49,14 +40,11 @@
     position:relative;
     background-color:$contentColor;
     border:{
-      top:solid 3px $firstColor;
+      top:solid 3px $thirdColor;
       left:solid 1px $thirdColor;
       right:solid 1px $thirdColor;
       bottom:solid 1px $thirdColor;
     }
-    @include border-bottom-radius($radius);
-    @include box-shadow(0px 0px 8px rgba(0, 0, 0, 0.1));
-
     &.active{display:block;}
   }
 }
@@ -70,8 +58,6 @@
       cursor:default;
       background-color:darken(#6fb536, 10%);
       color:$lightFontColor;
-      @include box-shadow(0 0 6px rgba(0,0,0,0.1),
-                        inset 0 -10px 10px darken(#5fa229, 8%));
     }
   }
   .container{
