--- a/src/Mapbender/CoreBundle/Resources/views/ElementAdmin/sketch.html.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/ElementAdmin/sketch.html.twig
@@ -1,4 +1,4 @@
-<div class="elementFormWmsLoader elementForm">
+<div class="elementFormWmsLoader elementForm defaultForm">
     {{ form_label(form.title) }}{{ form_widget(form.title) }}
     <div class="clearContainer"></div>
     {{ form_label(form.configuration.target) }}{{ form_widget(form.configuration.target) }}
