--- a/src/Mapbender/ManagerBundle/Resources/public/sass/element/copyright.scss
+++ b/src/Mapbender/ManagerBundle/Resources/public/sass/element/copyright.scss
@@ -1,8 +1,8 @@
 @import "libs/variables";
 @import "libs/mixins";
 
-.elementFormCopyright, .elementFormActivity{
+.elementFormCopyright{
   $label:100px;
   .labelInput{width:$label;}
-  .dropdown, .input{width:$elementPopupWidth - $label + $space;}
+  .dropdown, .input{width:$elementPopupWidth - $label;}
 }
