--- a/src/Mapbender/ManagerBundle/Resources/public/sass/element/featureinfo.scss
+++ b/src/Mapbender/ManagerBundle/Resources/public/sass/element/featureinfo.scss
@@ -4,7 +4,7 @@
 .elementFormFeatureInfo{
   $label:60px;
   .labelInput{width:$label;}
-  .dropdown, .input{width:$elementPopupWidth - $label  + $space;}
+  .dropdown, .input{width:$elementPopupWidth - $label}
   .checkWrapper{margin-bottom:$space/2;}
   .labelCheck{margin-right:$space;}
 }
