--- a/src/Mapbender/ManagerBundle/Resources/public/sass/element/overview.scss
+++ b/src/Mapbender/ManagerBundle/Resources/public/sass/element/overview.scss
@@ -7,7 +7,7 @@
   .labelInput{width:$label;}
   .checkWrapper{margin-bottom:$space/2;}
   .labelCheck{margin-right:$space;}
-  .dropdown, .input{width:$elementPopupWidth - $label + $space ;}
+  .dropdown, .input{width:$elementPopupWidth - $label;}
   .singleRow{
     .labelInput, & > .input{float:left;}
     .labelInput{
