--- a/src/Mapbender/ManagerBundle/Resources/public/sass/manager/manager.scss
+++ b/src/Mapbender/ManagerBundle/Resources/public/sass/manager/manager.scss
@@ -4,9 +4,9 @@
 @import "libs/icons";
 
 @import "modules/base";
+@import "modules/text";
 @import "modules/layout";
 @import "modules/popup";
-@import "modules/text";
 @import "modules/input";
 @import "modules/button";
 @import "modules/seperator";
@@ -21,7 +21,11 @@ $contentPaneWidth:800px;
 $navWidth:200px;
 $pageWidth:$contentPaneWidth + $navWidth;
 
-// --------------------------------------------------------------- PAGE
+
+
+
+
+// ------------------------------------------------------------------------ PAGE
 .page{
   position:relative;
   top:-$bannerHeight;
@@ -33,8 +37,7 @@ $pageWidth:$contentPaneWidth + $navWidth;
 
 
 
-
-// ----------------------------------------------------------- PAGE TOP
+// -------------------------------------------------------------------- PAGE TOP
 .head{
   position: relative;
   height:$bannerHeight;
@@ -43,20 +46,17 @@ $pageWidth:$contentPaneWidth + $navWidth;
   min-width:$pageWidth;
   border-top:solid 5px darken($firstColor, 10%);
   background-image:url($headPatternUrl);
-  @include background(linear-gradient(rgba(255,255,255,.1), rgba(255,255,255,0)),
+  @include background(linear-gradient(rgba(255,255,255,.1),
+                                      rgba(255,255,255,0)),
                       url($headPatternUrl));
-
-  @include box-shadow(inset lighten(#000, 20%) 0px 1px 0px);
-
-  hr{@include pos('',0,0,0);}
+  hr{@include absolute('' 0 0 0);}
 }
 .accountBar{
   color:$middleFontColor;
   cursor:pointer;
   padding:($space/4) ($space/2) ($space/4) ($space/2);
   background-color:$contentColor;
-  @include box-shadow(0px 0px 3px black);
-  @include pos(0,0,'','');
+  @include absolute(0 0 '' '');
 }
 .accountMenu{
   height:20px;
@@ -66,7 +66,7 @@ $pageWidth:$contentPaneWidth + $navWidth;
   &.opened{height:65px;}
   .iconDown{
     padding-right:$space;
-    &:before{@include pos('',0,'','');}
+    &:before{@include absolute('' 0 '' '');}
   }
 }
 
@@ -75,18 +75,15 @@ $pageWidth:$contentPaneWidth + $navWidth;
 
 
 
-// ---------------------------------------------------------- PAGE LEFT
+// ------------------------------------------------------------------- PAGE LEFT
 .leftPane{
   width:$navWidth;
-  @include pos(0, '', '', 0);
+  @include absolute(0 '' '' 0);
 
-  .navigation{
-    background-color:$contentColor;
-    @include box-shadow(0px 0px 3px rgba(0, 0, 0, 0.6));
-  }
+  .navigation{background-color:$contentColor;}
   .logo{
     max-height:120px;
-    @include pos($space,'','',($space + $space/2));
+    @include absolute($space '' '' ($space + $space/2));
   }
 }
 .logoContainer{
@@ -95,11 +92,11 @@ $pageWidth:$contentPaneWidth + $navWidth;
 }
 
 .navLevel1{
-  border-right:1px solid lighten($firstColor, 40%);
   padding:$space/2 $space;
   background-color:$contentColor;
-  @include box-shadow(0px 0px 3px rgba(0, 0, 0, 1));
-  @include pos($bannerHeight,0,'',0);
+  border-left:solid 1px $thirdColor;
+  border-bottom:solid 1px $thirdColor;
+  @include absolute($bannerHeight 0 '' 0);
 
   &>.navItem {display:block;}
   & > .activeItem{
@@ -113,7 +110,6 @@ $pageWidth:$contentPaneWidth + $navWidth;
   }
 }
 .navItem{
-  // display:none; // XXXVH new navigation structure needed -> next release, but first show all navigation items
   a {
     &:before{margin-right:5px;}
 
@@ -124,14 +120,11 @@ $pageWidth:$contentPaneWidth + $navWidth;
     color:$middleFontColor;
     padding:($space/4) ($space/2);
 
-    @include text-shadow(1px 1px 0px $lightFontColor);
-    @include transition(color 0.2s linear);
-
     &:hover{color:$darkFontColor;}
   }
   &.activeItem {
     display: block;
-    & > a{color: $ciColor !important;}
+    & > a{color: $ciColor;}
   }
 }
 
@@ -139,17 +132,17 @@ $pageWidth:$contentPaneWidth + $navWidth;
 
 
 
-// ---------------------------------------------------------- PAGE RIGHT
+// ------------------------------------------------------------------ PAGE RIGHT
 .rightPane{
   width:$contentPaneWidth;
-  @include pos(0, 0, '', $navWidth);
+  @include absolute(0 0 '' $navWidth);
 }
 
 
 
 
 
-// --------------------------------------------------------- PAGE CENTER
+// ----------------------------------------------------------------- PAGE CENTER
 .contentPane{
   $top:$space*5;
 
@@ -162,31 +155,15 @@ $pageWidth:$contentPaneWidth + $navWidth;
     margin:0px;
     background-color:$contentColor;
     background-image:url($contentPatternUrl);
-    @include box-shadow(0px 0px 3px rgba(0, 0, 0, 0.6));
-    @include border-radius($radius);
-
-    hr{@include pos(0,0,'',0);}
-
-    // uuhh baby show me your paper effect ... hrrr
-    &:before, &:after{
-      content:"";
-      background-color:$contentColor;
-      height:10px;
-      @include box-shadow(0px 0px 3px rgba(0, 0, 0, 0.6));
-      @include border-radius($radius);
-    }
-    &:before{
-      z-index:-10;
-      @include pos('',5px,-3px,5px);
-    }
-    &:after{
-      content:"";
-      z-index:-20;
-      @include pos('',10px,-6px,10px);
+    border: {
+      top: solid 1px $secondColor;
+      left: solid 1px $thirdColor;
+      right: solid 1px $thirdColor;
+      bottom: solid 5px $thirdColor;
     }
   }
   .mapbenderVersion{
     color:$lightFontColor;
-    @include pos($top,0,'','');
+    text-align:right;
   }
 }
