--- a/src/Mapbender/PrintBundle/Resources/views/ElementAdmin/imageexport.html.twig
+++ b/src/Mapbender/PrintBundle/Resources/views/ElementAdmin/imageexport.html.twig
@@ -1,6 +1,6 @@
-<div class="elementFormImageExport elementForm">
+<div class="elementFormImageExport elementForm defaultForm">
     {{ form_label(form.title) }}{{ form_widget(form.title) }}
     <div class="clearContainer"></div>
     {{ form_label(form.configuration.target) }}{{ form_widget(form.configuration.target) }}
-    <div class="clearContainer"></div> 
+    <div class="clearContainer"></div>
 </div>
