--- a/src/Mapbender/WmcBundle/Resources/views/ElementAdmin/wmclist.html.twig
+++ b/src/Mapbender/WmcBundle/Resources/views/ElementAdmin/wmclist.html.twig
@@ -1,4 +1,4 @@
-<div class="elementFormWmsLoader elementForm">
+<div class="elementFormWmsLoader elementForm defaultForm">
     {{ form_label(form.title) }}{{ form_widget(form.title) }}
     <div class="clearContainer"></div>
     {{ form_label(form.configuration.tooltip) }}{{ form_widget(form.configuration.tooltip) }}
@@ -7,6 +7,6 @@
     <div class="clearContainer"></div>
     <div class="left">
         {{ form_widget(form.configuration.label) }}<label for="{{form.configuration.label.vars.id}}" class="labelCheck">{{"mb.wmc.admin.wmclist.label"|trans}}</label>
-    </div>        
-    <div class="clearContainer"></div> 
+    </div>
+    <div class="clearContainer"></div>
 </div>
