--- a/src/Mapbender/WmcBundle/Resources/views/ElementAdmin/wmcloader.html.twig
+++ b/src/Mapbender/WmcBundle/Resources/views/ElementAdmin/wmcloader.html.twig
@@ -1,4 +1,4 @@
-<div class="elementFormWmsLoader elementForm">
+<div class="elementFormWmsLoader elementForm defaultForm">
     {{ form_label(form.title) }}{{ form_widget(form.title) }}
     <div class="clearContainer"></div>
     {{ form_label(form.configuration.tooltip) }}{{ form_widget(form.configuration.tooltip) }}
@@ -10,6 +10,6 @@
     {{ form_label(form.configuration.keepSources) }}{{ form_widget(form.configuration.keepSources) }}
     <div class="left">
         {{ form_widget(form.configuration.keepExtent) }}<label for="{{form.configuration.keepExtent.vars.id}}" class="labelCheck">{{"mb.wmc.admin.wmcloader.keep_extent"|trans}}</label>
-    </div>        
-    <div class="clearContainer"></div> 
+    </div>
+    <div class="clearContainer"></div>
 </div>
