--- a/src/Mapbender/WmsBundle/Resources/views/ElementAdmin/wmsloader.html.twig
+++ b/src/Mapbender/WmsBundle/Resources/views/ElementAdmin/wmsloader.html.twig
@@ -1,4 +1,4 @@
-<div class="elementFormWmsLoader elementForm">
+<div class="elementFormWmsLoader elementForm defaultForm">
     <div class="left">
         {{ form_widget(form.configuration.autoOpen) }}<label for="{{form.configuration.autoOpen.vars.id}}" class="labelCheck">{{"mb.wms.wmsloader.admin.label.autoopen"|trans}}</label>
     </div>
