--- a/src/Mapbender/CoreBundle/Resources/views/corebundle.trans.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/corebundle.trans.twig
@@ -128,3 +128,6 @@
 {{ "mb.core.zoombar.tag.control" | trans}}
 {{ "mb.core.zoombar.tag.navigation" | trans}}
 {{ "mb.core.zoombar.tag.panel" | trans}}
+
+{{ "mb.core.simplesearch.class.title" | trans }}
+{{ "mb.core.simplesearch.class.description" | trans }}
