add input css classes

--- a/src/Mapbender/CoreBundle/Resources/views/Element/simplesearch.html.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/Element/simplesearch.html.twig
@@ -1,6 +1,6 @@
 <form id="{{ id }}" class="mb-element mb-element-simplesearch" action="{{ path('mapbender_core_application_element', {'slug': app.request.get('slug'), 'id': id}) }}" method="post" title="{{ configuration.tooltip|default(title)|trans }}">
-    <div class="autocompleteWrapper">
-        <input type="text" class="searchterm"/>
+    <div class="autocompleteWrapper inputWrapper">
+        <input type="text" class="searchterm input"/>
         <div class="autocompleteList"></div>
     </div>
 {% if configuration.delay == 0 %}
