signe legendurl if proxy=true added class for each basesourceswitch added

--- a/src/Mapbender/CoreBundle/Resources/views/Element/basesourceswitcher.html.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/Element/basesourceswitcher.html.twig
@@ -1,7 +1,7 @@
 <ul id="{{ id }}" class="mb-element mb-element-basesourceswitcher"  title="{{ configuration.tooltip|default(title)|trans }}">
 {% if configuration.sourcesets is defined %}
   {% for sourceset in configuration.sourcesets %}
-    <li class="basesourcesetswitch" data-state="{% if loop.first %}active{% endif %}" data-sourceset="{% for source in sourceset.sources %}{% if not loop.first %},{% endif %}{% spaceless %}{{- source -}}{% endspaceless %}{% endfor %}" >{{ sourceset.title | trans }}</li>
+    <li class="basesourcesetswitch bsswtch-{{ loop.index }}" data-state="{% if loop.first %}active{% endif %}" data-sourceset="{% for source in sourceset.sources %}{% if not loop.first %},{% endif %}{% spaceless %}{{- source -}}{% endspaceless %}{% endfor %}" >{{ sourceset.title | trans }}</li>
   {% endfor %}
 {% endif %}
 </ul>
