--- a/src/Mapbender/WmsBundle/Resources/views/Repository/new.html.twig
+++ b/src/Mapbender/WmsBundle/Resources/views/Repository/new.html.twig
@@ -2,6 +2,15 @@
 
 {% block title %}{{ 'mb.wms.wmsloader.repo.new.label.addservice' | trans }}{% endblock %}
 
+{% block css %}
+  {{parent()}}
+  {% stylesheets filter="compass,cssrewrite"
+    "bundles/mapbendermanager/sass/manager/services.scss"
+  %}
+    <link rel="stylesheet" href="{{ asset_url }}" />
+  {% endstylesheets %}
+{% endblock %}
+
 {% block manager_content %}
 
     {% include 'MapbenderWmsBundle:Repository:form.html.twig' %}
