--- a/src/Mapbender/WmsBundle/Resources/views/Repository/view.html.twig
+++ b/src/Mapbender/WmsBundle/Resources/views/Repository/view.html.twig
@@ -3,6 +3,15 @@
 
 {% block title %}{{ 'mb.wms.wmsloader.repo.view.title.wms' | trans }} {{ wms.title }}{% endblock %}
 
+{% block css %}
+  {{parent()}}
+  {% stylesheets filter="compass,cssrewrite"
+    "bundles/mapbendermanager/sass/manager/services.scss"
+  %}
+    <link rel="stylesheet" href="{{ asset_url }}" />
+  {% endstylesheets %}
+{% endblock %}
+
 {% block manager_js %}
     <script type="text/javascript" src="{{ asset('bundles/mapbenderwms/repository/repository.js') }}"></script>
 {% endblock %}
